se consumio datos de peliculas populares

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,9 +5,8 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
   <div class="ion-padding">
-  <ion-button>ver top 10 Peliculas</ion-button>
+  <ion-button [routerLink]="['/popularmovie']" routerLinkActive="router-link-active" >ver top 10 Peliculas</ion-button>
   </div>
 </ion-content>
