se añadio los eventos de guardar en el localstorage y el traductor

--- a/src/app/pages/popularmovie/popularmovie.page.html
+++ b/src/app/pages/popularmovie/popularmovie.page.html
@@ -8,8 +8,8 @@
 </ion-header>
 <ion-content>
 <ion-grid>
-  <ion-card *ngFor="let item of populares">
-  <ion-row>
+  <ion-card *ngFor="let item of populares; let i = index;">
+  <ion-row *ngIf=" i < 10">
     <ion-col size="4" >
             <img [src]="item.poster_path | imagen" 
                  *ngIf="item.poster_path">       
