--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -1,62 +1,91 @@
 <ion-header>
-        <ion-toolbar>
-            <ion-buttons slot="start">
-                <ion-button (click)=" regresar() ">
-                  <ion-icon slot="start" name="arrow-round-back"></ion-icon>
-                  <ion-label></ion-label>
-                </ion-button>
-              </ion-buttons>
-          <ion-title>
-            <h6>{{pelicula.title}}</h6>
-          </ion-title>
-        </ion-toolbar>
-      </ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="regresar()">
+        <ion-icon
+          slot="start"
+          name="arrow-round-back"
+        ></ion-icon>
+        <ion-label></ion-label>
+      </ion-button>
+    </ion-buttons>
+    <ion-title>
+      <h6>{{pelicula.title}}</h6>
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
-        <ion-card>
-            <img [src]="pelicula.backdrop_path | imagen" *ngIf="pelicula.backdrop_path">
-          <ion-grid>
-            <ion-row>
-                <ion-col size="8">
-                    <ion-row align-items-center *ngFor="let item of pelicula.production_companies">
-                        <ion-col size="12" >
-                                <ion-card-subtitle> {{item.name}}</ion-card-subtitle> 
-                        </ion-col>
-                   
-                      </ion-row>     
-                </ion-col>
-              <ion-col size="4" class="cuadroimagen">
-                  <ion-card class="imagenposter">
-                      <img [src]="pelicula.poster_path | imagen" 
-                           class="poster"
-                           *ngIf="pelicula.poster_path">
-                    </ion-card>
-              </ion-col>
-            </ion-row>
-            <ion-row>
+  <ion-refresher
+    slot="fixed"
+    (ionRefresh)="mostrarDatos(true, $event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
+  <ion-card>
+
+    <img [src]="pelicula.backdrop_path | imagen" *ngIf="pelicula.backdrop_path">
     
-                <ion-col size="6">
-                    <ion-item>
-             
-                      <ion-label>Rating</ion-label>
-                      <ion-note slot="end" color="primary">{{ pelicula.vote_average }}</ion-note>
-                    </ion-item>
-                  </ion-col>
-                <ion-col size="6">
-                    <ion-item>
-                   
-                      <ion-label>Votos</ion-label>
-                      <ion-note slot="end" color="primary">{{ pelicula.vote_count }}</ion-note>
-                    </ion-item>
-                  </ion-col>
-    
+    <ion-grid>
+      <ion-row>
+        <ion-col size="8">
+          <h6 class="textotitulo">{{"Produccion" | translate}}</h6>
+          <ion-row align-items-center="align-items-center" *ngFor="let item of pelicula.production_companies">
+            <ion-col size="12">
+              <ion-card-subtitle>{{item.name}}</ion-card-subtitle>
+            </ion-col>
           </ion-row>
-            <ion-row>
-                <ion-col size="12" class="textotitulo">
-                  <h3 class="textotitulo">{{pelicula.original_title}}</h3>
-                  <h6 class="textodes"> {{ pelicula.overview }}</h6>
-                  </ion-col>
-            </ion-row>
-          
-          </ion-grid>
-              </ion-card>
+        </ion-col>
+        <ion-col size="4" class="cuadroimagen">
+          <ion-card class="imagenposter">
+            <img [src]="pelicula.poster_path | imagen" class="poster" *ngIf="pelicula.poster_path">
+          </ion-card>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="6">
+          <ion-item>
+            <ion-label>
+              {{"Clasificacion" | translate}}
+            </ion-label>
+            <ion-note slot="end" color="primary">{{ pelicula.vote_average }}</ion-note>
+          </ion-item>
+        </ion-col>
+        <ion-col size="6">
+          <ion-item>
+            <ion-label>{{"votos" | translate}}</ion-label>
+            <ion-note slot="end" color="primary" >{{ pelicula.vote_count }}</ion-note>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="12" class="textotitulo">
+          <h3 class="textotitulo">{{pelicula.original_title}}</h3>
+          <h6 class="textodes">{{ pelicula.overview }}</h6>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="12">
+          <h5 class="textotitulo">{{"paisProd" | translate}}</h5>
+        </ion-col>
+        <ion-col size="6" *ngFor="let item of pelicula.production_countries">
+          <h6 class="textotitulo">{{ item.name }}</h6>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="12">
+          <h5 class="textotitulo">{{"Generos" | translate}}</h5>
+        </ion-col>
+        <ion-col size="12">
+          <ion-chip *ngFor="let item of pelicula.genres">
+            <ion-label>{{ item.name }}</ion-label>
+          </ion-chip>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-card>
 </ion-content>
