--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,12 +1,40 @@
 <ion-header>
   <ion-toolbar>
+        <ion-img slot="start" src="../../../assets/img/logohead.png" class="imagenlogohead">
+        </ion-img>
     <ion-title>
-      Peliculas
+     {{ 'Heade' | translate }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <div class="ion-padding">
-  <ion-button [routerLink]="['/popularmovie']" routerLinkActive="router-link-active" >ver top 10 Peliculas</ion-button>
-  </div>
+  <ion-row padding>
+    <ion-col size="12">
+        <img src="../../../assets/img/logo.png" >
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col padding>
+        <ion-text color="dark" class="textosaludo">
+            <h1>{{"saludo" | translate }}</h1>
+          </ion-text>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col padding>
+        <ion-item>
+            <ion-label>{{'Idioma' | translate}}</ion-label>
+            <ion-select placeholder="{{'seleccionaId'| translate}}" (ionChange)="segmentChanged($event)">
+              <ion-select-option *ngFor="let lang of  langs" [value]="lang">{{lang}}</ion-select-option>
+            </ion-select>
+          </ion-item>
+    </ion-col>
+  </ion-row >
+  <ion-row padding>
+    <ion-col>
+        <div class="ion-padding" padding>
+            <ion-button expand="full" fill="outline" [routerLink]="['/popularmovie']" routerLinkActive="router-link-active" color="success">{{"Boton" | translate }}</ion-button>
+        </div>
+    </ion-col>
+  </ion-row>
 </ion-content>
