--- a/src/app/pages/popularmovie/popularmovie.page.html
+++ b/src/app/pages/popularmovie/popularmovie.page.html
@@ -7,6 +7,10 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
+    <ion-refresher slot="fixed" (ionRefresh)="mostrarPopulares(true, $event)">
+        <ion-refresher-content>
+        </ion-refresher-content>
+      </ion-refresher>
 <ion-grid>
   <ion-card *ngFor="let item of populares; let i = index;">
   <ion-row *ngIf=" i < 10">
@@ -19,17 +23,17 @@
       <ion-row>
         <ion-col size="12">
             <ion-label class="itemtext"><h2>{{item.original_title}}</h2></ion-label>
-            <ion-label class="itemtext"><h4><strong>Release : </strong>{{item.release_date}}</h4></ion-label>
-            <ion-label class="itemtext"><h4><strong>Popularity : </strong>{{item.popularity}}</h4></ion-label>
+            <ion-label class="itemtext"><h4><strong>{{ "votos" | translate}} : </strong>{{item.release_date}}</h4></ion-label>
+            <ion-label class="itemtext"><h4><strong>{{ "Lanzamiento" | translate}} : </strong>{{item.popularity}}</h4></ion-label>
             <ion-label class="itemtext textodes"><h6>{{ item.overview | slice: 0: vermas }}...</h6></ion-label>
         </ion-col>
       </ion-row>
       <ion-row>
-          <ion-col size="7">
+          <ion-col size="6">
 
           </ion-col>
-          <ion-col size="5">
-              <ion-label  color="primary" (click)="mostraDetalle( item.id )"><h6>Ver mas!</h6></ion-label>
+          <ion-col size="6">
+              <ion-label  color="primary" (click)="mostraDetalle( item.id )"><h6>{{'Ver mas..' | translate}}</h6></ion-label>
           </ion-col>
         </ion-row>
       </ion-col>
